# push_swap

./: README.md
push_swap/: .gitignore  CMakeLists.txt  Makefile  benchmark.sh  gen.py  test.sh
push_swap/include/: error.h  get_next_line.h  op.h  optimize.h  parse.h  push_swap.h  reader.h  stack.h  utils.h
push_swap/src/: chunking.c  chunking_lt.c  error.c  main.c  op.c  optimize.c  parse.c  partition.c  partition_a.c  partition_b.c  push_swap.c  push_swap_g.c  stack.c  stackex.c
push_swap/src/checker/: checker.c  reader.c
push_swap/src/utils/: alloca_to.c  find_gt.c  find_lt.c  ft_atoi.c  ft_atoss.c  ft_isdigit.c  ft_isspace.c  ft_linsearch.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstnew.c  ft_lstsize.c  ft_max.c  ft_memcpy.c  ft_memset.c  ft_min.c  ft_qsort.c  ft_splitf.c  ft_strchr.c  ft_strcmp.c  ft_strdup_until.c  ft_strjoin.c  ft_strlcpy.c  ft_strlen.c  ft_strlen_until.c  ft_strslen.c  get_next_line.c  get_next_line_utils.c  iarrdup.c  issorted.c  nth_element.c  nth_element_copy.c  put_op.c  swap.c
